pkl-core/src/test/files/LanguageSnippetTests/input/errors/functionNotFoundInClass.pkl
class Foo {
  function bar(x) = x
}

res1 = new Foo {}.baz(42)
